syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service SecurityLoginsLogService {
	rpc GetSecurityLoginsLog(IdRequest8) returns (SecurityLoginsLog);
	rpc GetSecurityLoginsLogs(google.protobuf.Empty) returns (SecurityLoginsLogs);
	rpc AddSecurityLoginsLogs(SecurityLoginsLogs) returns (google.protobuf.Empty);
	rpc UpdateSecurityLoginsLog(SecurityLoginsLogs) returns (google.protobuf.Empty);
	rpc DeleteSecurityLoginsLog(SecurityLoginsLogs) returns (google.protobuf.Empty);
}

message IdRequest8 {
	string Id = 1;
}

message SecurityLoginsLog {
	string Id = 1;
	string Login = 2;
	string SourceIP = 3;
	google.protobuf.Timestamp LogonDate = 4;	
	bool IsSuccesful = 5;	
}

message SecurityLoginsLogs {
	repeated SecurityLoginsLog SecurLogin = 1;
}
